# smakolyk

./: .env.example  .gitignore  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
apps/shared/: models.py
apps/smakolyk/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  utils.py  values.py  views.py
apps/smakolyk/fixtures/: first_menu.json
apps/smakolyk/migrations/: 0001_initial.py
apps/smakolyk/static/css/: history.css  home.css  order.css  order_error.css  success.css
apps/smakolyk/static/js/: history.js  order.js
apps/smakolyk/static/smakolyk/css/: home.css  (+2 more)
apps/smakolyk/templates/: access_denied_order.html  history.html  home.html  order.html  order_error.html  order_success.html  welcome.html
apps/smakolyk/tests/: test_forms.py  test_models.py  test_utils.py  test_views.py  values.py
apps/user/: apps.py  custom_validators.py  forms.py  models.py  urls.py  utils.py  values.py  views.py
apps/user/migrations/: 0001_initial.py
apps/user/static/css/: profile.css
apps/user/templates/: edit_profile.html  login.html  profile.html  signup.html  success.html
apps/user/tests/: test_custom_validators.py  test_forms.py  test_models.py  test_utils.py  test_views.py  values.py
apps/userauth/: custom_validators.py  forms.py  models.py  urls.py  views.py
apps/userauth/migrations/: 0001_initial.py
core/: settings.py  urls.py  wsgi.py
gunicorn/: conf.py
nginx/: default.conf
templates/: base.html
templates/apps.smakolyk/: custom_image_field.html  home.html  profile.html  update_profile.html  welcome.html
templates/apps.userauth/: signup.html  success.html
(+4 files in other folders)
