[tool.poetry]
name = "smakolyk"
version = "0.1.0"
description = ""
authors = ["Cucina <60839899+iamnovichek@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.9"
django-widget-tweaks = "^1.5.0"
django-phonenumber-field = "^7.2.0"
pillow = "^10.1.0"
phonenumbers = "^8.13.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
